add stake with us for polkadot

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel='icon' href='<%= BASE_URL %>favicon.ico'>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
-    <title>CryptoLab</title>
+    <title>CryptoLab.Network</title>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
